@@ -19,9 +19,12 @@ package apmecho_test
 
 import (
 	"fmt"
+	"io/ioutil"
 	"net/http"
 	"net/http/httptest"
 	"testing"
+
+	"go.elastic.co/apm"
 
 	"github.com/labstack/echo"
 	"github.com/pkg/errors"
@@ -44,6 +47,12 @@ func TestMiddlewareHTTPSuite(t *testing.T) {
 	e.GET("/panic_after_write", func(c echo.Context) error {
 		c.String(200, "hello, world")
 		panic("boom")
+	})
+	e.POST("/explicit_error_capture", func(c echo.Context) error {
+		ioutil.ReadAll(c.Request().Body)
+		e := apm.CaptureError(c.Request().Context(), errors.New("total explosion"))
+		e.Send()
+		return c.String(503, e.Error())
 	})
 	suite.Run(t, &apmtest.HTTPTestSuite{
 		Handler:  e,
