@@ -19,10 +19,13 @@ package apmgin_test
 
 import (
 	"bytes"
+	"io/ioutil"
 	"log"
 	"net/http"
 	"net/http/httptest"
 	"testing"
+
+	"go.elastic.co/apm"
 
 	"github.com/gin-gonic/gin"
 	"github.com/pkg/errors"
@@ -53,6 +56,12 @@ func TestMiddlewareHTTPSuite(t *testing.T) {
 	e.GET("/panic_after_write", func(c *gin.Context) {
 		c.String(200, "hello, world")
 		panic("boom")
+	})
+	e.POST("/explicit_error_capture", func(c *gin.Context) {
+		ioutil.ReadAll(c.Request.Body)
+		e := apm.CaptureError(c.Request.Context(), errors.New("total explosion"))
+		e.Send()
+		c.String(503, e.Error())
 	})
 	suite.Run(t, &apmtest.HTTPTestSuite{
 		Handler:  e,
