@@ -30,6 +30,7 @@ https://github.com/elastic/apm-agent-go/compare/v1.11.0...master[View commits]
 - module/apmawssdkgo: add support for instrumenting sqs RPC calls {pull}933[#(933)]
 - module/apmawssdkgo: add support for instrumenting sns RPC calls {pull}938[#(938)]
 - Parse "//" comments in SQL/CQL {pull}937[#(937)]
+- Fix CaptureError to capture the request body when ELASTIC_APM_CAPTURE_BODY is enabled {pull}906[#(906)]
 - module/apmgrpc: record underlying HTTP/2 context {pull}904[#(904)]
 
 [[release-notes-1.x]]
